[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingagents"
version = "0.1.0"
description = "Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = "==3.13.*"
license = {text = "Apache-2.0"}
authors = [
    {name = "TradingAgents Team", email = "yijia.xiao@cs.ucla.edu"},
]
keywords = ["trading", "agents", "llm", "financial", "multi-agent", "langchain", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "akshare>=1.16.98",
    "backtrader>=1.9.78.123",
    "chainlit>=2.9.0",
    "chromadb>=1.3.4",
    "eodhd>=1.0.32",
    "feedparser>=6.0.11",
    "finnhub-python>=2.4.23",
    "grip>=4.6.2",
    "langchain>=1.0.7",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai>=1.0.3",
    "langgraph>=1.0.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "parsel>=1.10.0",
    "praw>=7.8.1",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=7.0.1",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "tushare>=1.4.21",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://github.com/TauricResearch/TradingAgents"
Repository = "https://github.com/TauricResearch/TradingAgents"

[project.scripts]
tradingagents = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["tradingagents", "cli"]

[tool.hatch.build.targets.sdist]
include = [
    "tradingagents/**",
    "cli/**",
    "README.md",
    "LICENSE",
    "requirements.txt",
]
exclude = [
    "tests/**",
    "assets/**",
]

[tool.uv.sources]
backtrader = { workspace = true }
